--- a/SocialNetwork.Console/SocialNetwork.Console.csproj
+++ b/SocialNetwork.Console/SocialNetwork.Console.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SocialNetwork.ApplicationServices\SocialNetwork.ApplicationServices.csproj" />
+  </ItemGroup>
+
 </Project>
