--- a/SocialNetwork.Tests/SocialNetwork.Tests.csproj
+++ b/SocialNetwork.Tests/SocialNetwork.Tests.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\SocialNetwork.ApplicationServices\SocialNetwork.ApplicationServices.csproj" />
     <ProjectReference Include="..\SocialNetwork.Console\SocialNetwork.Console.csproj" />
+    <ProjectReference Include="..\SocialNetwork.Domain\SocialNetwork.Domain.csproj" />
   </ItemGroup>
 
 </Project>
